# gridflow

./: .env.example  .gitignore  CHANGELOG.md  CLAUDE.md  CONTRIBUTING.md  LICENSE  Makefile  README.md  pyproject.toml
.claude/: settings.local.json
.github/workflows/: ci.yml
.planning/: MILESTONES.md  PROJECT.md  REQUIREMENTS.md  RETROSPECTIVE.md  ROADMAP.md  STATE.md
.planning/codebase/: ARCHITECTURE.md  CONCERNS.md  CONVENTIONS.md  INTEGRATIONS.md  STACK.md  STRUCTURE.md  TESTING.md
.planning/debug/: entsoe-401-auth-failure.md  entsoe-connector-does-not-work.md  entsoe-live-suite-h5.5.md  neso-backfill-bronze-date-resolved.md
.planning/milestones/: v0.11-open-meteo-renewable-extension-REQUIREMENTS.md  v0.11-open-meteo-renewable-extension-ROADMAP.md  v0.2-entsoe-gaps-MILESTONE-AUDIT.md  v0.2-entsoe-gaps-ROADMAP.md  v0.3-entsoe-validation-REQUIREMENTS.md  v0.3-entsoe-validation-ROADMAP.md  v0.4-elexon-validation-REQUIREMENTS.md  v0.4-elexon-validation-ROADMAP.md  v0.5-entsog-pipeline-validation-REQUIREMENTS.md  v0.5-entsog-pipeline-validation-ROADMAP.md  v0.6-neso-carbon-intensity-platform-REQUIREMENTS.md  v0.6-neso-carbon-intensity-platform-ROADMAP.md
.planning/research/: ENTSOG-ENDPOINT-RESEARCH.md  GIE-AGSI-API-RESEARCH.md  NESO-CARBON-INTENSITY-RESEARCH.md
.planning/reviews/: NESO-ENDPOINT-ITERATION-AUDIT.md
config/: settings.yaml  sources.yaml
docs/: CANONICAL_SCHEMA.yaml  CLI_CHEAT_SHEET.md  ENDPOINT_REFERENCE.md  PROJECT_OVERVIEW.md  available_at_stamp_fidelity.md  bronze_silver_partition_audit.md  entsoe_endpoint_catalog.yaml  entsog_endpoint_catalog.yaml  gie_agsi_endpoint_catalog.yaml  neso_endpoint_catalog.yaml
docs/DECISION_LOG/: ADR-001-project-root-resolution.md  ADR-002-client-reopen-readonly.md  ADR-003-client-get-select-star-exclude.md  ADR-017-append-only-class-attribute.md  ADR-018-append-only-run-suffixed-files.md  ADR-019-entsoe-a09-dedup.md  ADR-020-openmeteo-location-approximation.md  ADR-021-entsog-cmp-dynamic-schema.md  ADR-022-unmapped-enum-code-policy.md  ADR-023-connector-per-unit-failure-contract.md  ADR-024-silver-schema-manifest.md  ADR-025-temporal-vintage-and-revision-capture.md
docs/endpoints/: elexon.md  entsoe.md  entsog.md  gie.md  neso.md  open_meteo.md
scripts/: backfill.py  elexon_audit.py  elexon_audit_results.json  export_to_csv.py  init_duckdb.py  normalize_indo_published_at.py  normalize_published_at.py  run_all_sources.py  run_pipeline.py  seed_canonical_schema.py
src/gridflow/: __main__.py  cli.py  observability.py
tests/: conftest.py
tests/contracts/: test_bronze_silver_contract.py  test_elexon_schema_alignment.py  test_silver_gold_contract.py
tests/endpoints/: test_endpoint_live.py  test_endpoint_urls.py
tests/integration/: test_append_only_writes.py  test_available_at_keystone.py  test_bitemporal_run_id.py  test_bronze_to_silver.py  test_canonical_schema_alignment.py  test_cli_operational.py  test_cli_prune.py  test_cli_reset_guard.py  test_cli_runner_golden.py  test_cli_transform_refresh.py  test_connector_bounded_concurrent_fetch.py  test_data_dir_resolution.py  test_elexon_cli_live_smoke.py  test_elexon_connector.py  test_elexon_live_e2e.py  test_elexon_mocked_e2e.py  test_entsoe_connector.py  test_entsoe_live.py  test_entsoe_mocked_e2e.py  test_entsog_cli_live_smoke.py  test_entsog_cmp_schema_drift.py  test_entsog_live_e2e.py  test_entsog_mocked_e2e.py  test_eu_gas_storage_view.py  test_gie_agsi_cli_live_smoke.py  test_neso_live_e2e.py  (+13 more)
(+407 files in other folders)
