[project]
name = "gridflow"
version = "0.1.0"
description = "UK/EU energy market data pipeline for quantitative modelling"
requires-python = ">=3.11"
license = {text = "Apache-2.0"}
dependencies = [
    "httpx>=0.27",
    "tenacity>=8.2",
    "pydantic>=2.5",
    "pydantic-settings>=2.1",
    "polars>=1.0",
    "pyarrow>=15.0",
    "duckdb>=1.0",
    "lxml>=5.0",
    "typer>=0.12",
    "python-json-logger>=2.0",
    "pyyaml>=6.0",
    "tzdata>=2024.1",
    "python-dotenv>=1.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.23",
    "respx>=0.21",
    "ruff==0.15.12",  # pinned for reproducible CI lint/format (F29; floating >=0.4 drifts rules across runs)
    "mypy>=1.10",
    "pre-commit>=3.7",
]

[project.scripts]
gridflow = "gridflow.cli:app"

[build-system]
requires = ["setuptools>=68.0"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["src"]

[tool.ruff]
target-version = "py311"
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "I", "N", "UP", "B", "A", "SIM", "TCH"]

[tool.ruff.lint.flake8-type-checking]
# pydantic v2 evaluates field annotations at runtime, so imports used only in
# model annotations must NOT be relocated into a TYPE_CHECKING block by the
# TC00x rules — doing so makes pydantic fail to resolve the forward refs at
# runtime (F29: an unguarded --fix broke 82 schema tests). List BaseModel plus
# the first-party schema bases that subclass it.
runtime-evaluated-base-classes = [
    "pydantic.BaseModel",
    "gridflow.schemas.common.BaseSchema",
    "gridflow.schemas.common.TimestampMixin",
    "gridflow.schemas.common.SettlementPeriodMixin",
]

[tool.mypy]
python_version = "3.11"
strict = true
warn_return_any = true

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"
markers = [
    "live: tests that ping real APIs over the network (may be slow, require internet)",
    "integration: end-to-end tests exercising the CLI/storage stack against a tmp workspace (no network)",
    "slow: tests too slow for the default gate; deselected by the `-m 'not live and not slow'` run",
]
